findbugs: Method invokes inefficient Number constructor